--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,8 +5,8 @@ spring:
   mail:
     host: smtp.gmail.com
     port: 587
-    username: your-email@gmail.com
-    password: your-app-password
+    username: your-email@gmail.com # you need to change this value to your email service provider
+    password: your-app-password # add your password to connect with the service
     properties:
       mail.smtp.auth: true
       mail.smtp.starttls.enable: true
